封装axios请求、全局表格mixin

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -136,7 +136,15 @@ aside {
 .text-center {
   text-align: center
 }
-
+.text-left {
+  text-align: left
+}
+.text-right {
+  text-align: right
+}
+.p15{
+  padding: 15px;
+}
 .sub-navbar {
   height: 50px;
   line-height: 50px;
